# pyhanko-pdf-signer

./: README.md  cli.py  gen.py  generate_cert.sh  main.py  pyproject.toml  requirements.txt  test.py
certs/: Contoso Corporation.key  Contoso Corporation.pem  Contoso Corporation_Intermediate_CA.key  Contoso Corporation_Intermediate_CA.pem  Contoso Corporation_Root_CA.key  Contoso Corporation_Root_CA.pem  intermediate_ca.pem  intermediate_ca_key.pem  root_ca.pem  root_ca_key.pem  signer_cert.pem  signer_key.pem
html/: annotated.html  annotated_dup.js  classes.html  classmain_1_1_certificate_generation_tab-members.html  classmain_1_1_certificate_generation_tab.html  classmain_1_1_certificate_generation_tab.js  classmain_1_1_directory_selection_widget-members.html  classmain_1_1_directory_selection_widget.html  classmain_1_1_directory_selection_widget.js  classmain_1_1_file_selection_widget-members.html  classmain_1_1_file_selection_widget.html  classmain_1_1_file_selection_widget.js  classmain_1_1_main_window-members.html  classmain_1_1_main_window.html  classmain_1_1_main_window.js  classmain_1_1_p_d_f_signing_tab-members.html  classmain_1_1_p_d_f_signing_tab.html  classmain_1_1_p_d_f_signing_tab.js  classmain_1_1_p_d_f_verification_tab-members.html  classmain_1_1_p_d_f_verification_tab.html  classmain_1_1_p_d_f_verification_tab.js  classtest_1_1_intuitive_password_widget-members.html  classtest_1_1_intuitive_password_widget.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  (+15 more)
(+57 files in other folders)
