[project]
name = "pyhanko-pdf-signer"
version = "0.1.0"
description = "pdf signer utility using pyhanko library signing and stamping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>5.15.2; platform_system != 'Windows'",
    "pyqt5-qt5<=5.15.2 ; platform_system == 'Windows'",
    "cryptography>=45.0.3",
    "pyhanko>=0.29.0",
]
